--- a/build.gradle
+++ b/build.gradle
@@ -2,14 +2,17 @@
 plugins {
     id 'java'
     id 'application'
+	id 'war'
 }
 repositories {
     jcenter()
+	mavenCentral()
 }
 
 
 dependencies {
     compile 'com.google.guava:guava:23.0'
+	providedCompile 'javax.servlet:javax.servlet-api:3.1.0'
     testCompile 'junit:junit:4.12'
 }
 
