--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'java'
     id 'application'
 	id 'war'
+	id 'org.akhikhl.gretty' version '1.4.2'
 }
 repositories {
     jcenter()
