--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-/.nb-gradle/
+# .gitignore NetBeans Gradle projects
+# NetBeans
+.nb-gradle/
+
+# Gradle files
+.gradle/
+
+#Gradle build files (also jetty-runner)
+build/
+
+#Webapp runner (Tomcat) build files
+target/
+
+#Log files
+logs/
